openshift/base.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql-persistent
  name: postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails
  name: rails
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: rails
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": { "kind":"ImageStreamTag", "name": "postgresql-95-rhel7:release" },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"postgresql\")].image"
        },
        {
          "from": { "kind":"ImageStreamTag", "name": "postgresql-95-rhel7:release" },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"harden-config\")].image"
        }
      ]
  labels:
    app: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgresql
    name: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql-persistent
        name: postgresql
    spec:
      containers:
      - command:
        - sh
        - -c
        - |-
          cp -pr /opt/certificates/ /tmp &&
          find /tmp/certificates -type f | xargs chmod 400 &&
          run-postgresql -c log_line_prefix='%t '
        image: image-registry.openshift-image-registry.svc:5000/pitc-skills-int/postgresql-95-rhel7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 12
          initialDelaySeconds: 10
          periodSeconds: 20
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U ${POSTGRESQL_USER} -q -d ${POSTGRESQL_DATABASE}
              -c 'SELECT 1'
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 10m
            memory: 256Mi
        securityContext:
          capabilities: {}
          privileged: false
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgresql-data
        - mountPath: /opt/certificates/db/
          name: db-certificate
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql-database
      - name: db-certificate
        secret:
          secretName: certificate-postgresql
      - configMap:
          name: postgresql-config
        name: postgresql-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": { "kind":"ImageStreamTag", "name": "rails:release" },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"rails\")].image"
        },
        {
          "from": { "kind":"ImageStreamTag", "name": "rails:release" },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"prepare-assets\")].image"
        },
        {
          "from": { "kind":"ImageStreamTag", "name": "rails:release" },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"wait-for-database\")].image"
        },
        {
          "from": { "kind":"ImageStreamTag", "name": "rails:release" },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"migrate-database\")].image"
        },
        {
          "from": { "kind":"ImageStreamTag", "name": "rails-nginx:release" },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"nginx\")].image"
        }
      ]
  labels:
    app: rails
  name: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rails
    name: rails
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rails
        name: rails
    spec:
      containers:
      - command:
        - bash
        - -c
        - bundle exec puma -t 8
        image: image-registry.openshift-image-registry.svc:5000/pitc-skills-int/rails:latest
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 30
        name: rails
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 10m
            memory: 512Mi
        volumeMounts:
        - mountPath: /opt/certificates/ca/
          name: ca-certificate
        - mountPath: /opt/app-root/src/uploads/
          name: useruploads
      - command:
        - /usr/libexec/s2i/run
        image: rails-nginx:release
        name: nginx
        ports:
        - containerPort: 8443
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 512Mi
        volumeMounts:
        - mountPath: /opt/app-root/src/public
          name: httpd-public
        - mountPath: /etc/opt/rh/rh-nginx112/nginx/nginx.conf
          name: nginx-conf
          subPath: nginx.conf
        - mountPath: /opt/certificates/app/
          name: app-certificate
        - mountPath: /opt/certificates/ca/
          name: ca-certificate
      restartPolicy: Always
      volumes:
      - name: useruploads
        persistentVolumeClaim:
          claimName: useruploads
      - name: app-certificate
        secret:
          secretName: certificate-rails
      - name: ca-certificate
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          secretName: certificate-ca
      - emptyDir: {}
        name: httpd-public
      - configMap:
          items:
          - key: nginx.conf
            path: nginx.conf
          name: nginx-config
        name: nginx-conf
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rails
  name: rails
spec:
  host: skills-int.ocp.aws.puzzle.ch
  port:
    targetPort: 8443-tcp
  tls:
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDlzCCAn+gAwIBAgIJAOR9dKfV2z6qMA0GCSqGSIb3DQEBCwUAMGExCzAJBgNV
[...]
      6T7hYa4pIhWTVdU=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: rails
